--- a/package.json
+++ b/package.json
@@ -18,17 +18,17 @@
     "fs-extra": "^10.0.0",
     "ganache-cli": "^6.12.2",
     "mocha": "^8.3.2",
-    "next": "10.2.0",
+    "next": "^12.0.0",
     "node-fetch": "^2.6.1",
-    "react": "17.0.2",
+    "react": "^17.0.1",
     "react-confetti": "^6.0.1",
-    "react-dom": "17.0.2",
+    "react-dom": "^17.0.1",
     "react-hook-form": "^7.4.2",
     "react-icons": "^4.2.0",
     "react-use": "^17.2.4",
     "solc": "^0.4.17",
     "truffle-hdwallet-provider": "^1.0.17",
     "use-wallet": "^0.8.1",
-    "web3": "^1.3.5"
+    "web3": "^4.7.0"
   }
 }
